--- a/gui/gui.vcxproj.filters
+++ b/gui/gui.vcxproj.filters
@@ -1,22 +1,52 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
+    <Filter Include="gui">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="vendor">
+      <UniqueIdentifier>{1c6607fe-72c4-4849-b56e-3f96bd2c2347}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\glad">
+      <UniqueIdentifier>{43d4457b-bc61-40f8-bdb5-8e1d3ed1d220}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gui.cpp">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="include\application.hpp">
+      <Filter>gui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\window.hpp">
+      <Filter>gui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\debug.hpp">
+      <Filter>gui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\exception.hpp">
+      <Filter>gui</Filter>
+    </ClInclude>
+    <ClInclude Include="include\gl-core.hpp">
+      <Filter>gui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gl-core.cpp">
+      <Filter>gui</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\application.cpp">
+      <Filter>gui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>gui</Filter>
+    </ClCompile>
+    <ClCompile Include="vendor\src\glad.c">
+      <Filter>vendor\glad</Filter>
+    </ClCompile>
+    <ClCompile Include="src\exception.cpp">
+      <Filter>gui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\window.cpp">
+      <Filter>gui</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
