--- a/gui/gui.vcxproj
+++ b/gui/gui.vcxproj
@@ -24,17 +24,20 @@
     <ClInclude Include="include\exception.hpp" />
     <ClInclude Include="include\gl-core.hpp" />
     <ClInclude Include="include\index-buffer.hpp" />
+    <ClInclude Include="include\renderer.hpp" />
     <ClInclude Include="include\vertex-array.hpp" />
     <ClInclude Include="include\vertex-buffer.hpp" />
     <ClInclude Include="include\vertex-layout.hpp" />
     <ClInclude Include="include\window.hpp" />
     <ClCompile Include="src\gl-core.cpp" />
+    <ClInclude Include="src\draw-type.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\exception.cpp" />
     <ClCompile Include="src\index-buffer.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\vertex-array.cpp" />
     <ClCompile Include="src\vertex-buffer.cpp" />
     <ClCompile Include="src\vertex-layout.cpp" />
