--- a/gui/gui.vcxproj
+++ b/gui/gui.vcxproj
@@ -25,6 +25,8 @@
     <ClInclude Include="include\gl-core.hpp" />
     <ClInclude Include="include\index-buffer.hpp" />
     <ClInclude Include="include\renderer.hpp" />
+    <ClInclude Include="include\shader-type.hpp" />
+    <ClInclude Include="include\shader.hpp" />
     <ClInclude Include="include\vertex-array.hpp" />
     <ClInclude Include="include\vertex-buffer.hpp" />
     <ClInclude Include="include\vertex-layout.hpp" />
@@ -38,6 +40,7 @@
     <ClCompile Include="src\index-buffer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderer.cpp" />
+    <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\vertex-array.cpp" />
     <ClCompile Include="src\vertex-buffer.cpp" />
     <ClCompile Include="src\vertex-layout.cpp" />
