--- a/gui/gui.vcxproj.filters
+++ b/gui/gui.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClInclude Include="include\window-data.hpp">
       <Filter>gui</Filter>
     </ClInclude>
+    <ClInclude Include="include\input.hpp">
+      <Filter>gui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp">
@@ -108,6 +111,9 @@
     </ClCompile>
     <ClCompile Include="src\renderer.cpp">
       <Filter>gui\internal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\input.cpp">
+      <Filter>gui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
